parser.out
Created by PLY version 3.6 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> ciclo_clase clase_main
Rule 2     ciclo_clase -> empty
Rule 3     ciclo_clase -> ciclo_clase clase
Rule 4     clase -> CLASS ID herencia LLIZQ ciclo_vars ciclo_func LLDER
Rule 5     herencia -> empty
Rule 6     herencia -> UNDER ID
Rule 7     ciclo_vars -> empty
Rule 8     ciclo_vars -> ciclo_vars acceso vars
Rule 9     ciclo_func -> empty
Rule 10    ciclo_func -> ciclo_func func
Rule 11    clase_main -> CLASS MAIN LLIZQ ciclo_vars ciclo_func main LLDER
Rule 12    vars -> var_op PYC
Rule 13    var_op -> tipo ciclo_tipo
Rule 14    var_op -> ID ciclo_id
Rule 15    ciclo_tipo -> ID arreglo asignacion_exp
Rule 16    ciclo_tipo -> ciclo_id COMA ID arreglo asignacion_exp
Rule 17    ciclo_id -> ID arreglo asignacion_obj
Rule 18    ciclo_id -> ciclo_id COMA ID arreglo asignacion_obj
Rule 19    arreglo -> empty
Rule 20    arreglo -> CODER exp_arit COIZQ
Rule 21    asignacion_exp -> empty
Rule 22    asignacion_exp -> IGUAL exp
Rule 23    asignacion_obj -> empty
Rule 24    asignacion_obj -> IGUAL exp_objeto
Rule 25    tipo -> NUMERAL
Rule 26    tipo -> REAL
Rule 27    tipo -> BOOL
Rule 28    tipo -> CHAR
Rule 29    tipo -> STRING
Rule 30    acceso -> empty
Rule 31    acceso -> HIDDEN
Rule 32    acceso -> VISIBLE
Rule 33    func -> acceso retorno ID params cuerpo_func
Rule 34    retorno -> tipo
Rule 35    retorno -> WITHOUT
Rule 36    main -> VISIBLE WITHOUT MAIN PIZQ PDER cuerpo_func
Rule 37    params -> PIZQ params_op PDER
Rule 38    params_op -> empty
Rule 39    params_op -> params_ciclo
Rule 40    params_ciclo -> tipo ID
Rule 41    params_ciclo -> params_ciclo COMA tipo ID
Rule 42    cuerpo_func -> LLIZQ vars ciclo_estatuto LLDER
Rule 43    ciclo_estatuto -> empty
Rule 44    ciclo_estatuto -> ciclo_estatuto estatuto
Rule 45    estatuto -> while
Rule 46    estatuto -> for
Rule 47    estatuto -> asignacion
Rule 48    estatuto -> condicion
Rule 49    estatuto -> escritura
Rule 50    estatuto -> lectura
Rule 51    estatuto -> llamada_func
Rule 52    estatuto -> return
Rule 53    llamada_func -> caller ID PIZQ exp_op PDER PYC
Rule 54    caller -> empty
Rule 55    caller -> THIS PUNTO
Rule 56    caller -> ID arreglo PUNTO
Rule 57    exp_op -> empty
Rule 58    exp_op -> exp_ciclo
Rule 59    exp_ciclo -> exp
Rule 60    exp_ciclo -> exp_ciclo COMA exp
Rule 61    cte_bool -> TRUE
Rule 62    cte_bool -> FALSE
Rule 63    exp -> exp_bool
Rule 64    exp -> exp_arit
Rule 65    exp -> exp_str
Rule 66    exp -> exp_objeto
Rule 67    exp_objeto -> atom
Rule 68    exp_objeto -> NEW ID PIZQ PDER
Rule 69    return -> RETURN exp PYC
Rule 70    while -> WHILE PIZQ exp_bool PDER LLIZQ ciclo_estatuto LLDER
Rule 71    exp_bool -> termino_bool
Rule 72    exp_bool -> exp_bool OR termino_bool
Rule 73    termino_bool -> exp_b
Rule 74    termino_bool -> termino_bool AND exp_b
Rule 75    exp_b -> negacion op_exp_b
Rule 76    negacion -> empty
Rule 77    negacion -> NOT
Rule 78    op_exp_b -> llamada_func
Rule 79    op_exp_b -> cte_bool
Rule 80    op_exp_b -> comparacion
Rule 81    op_exp_b -> exp_bool
Rule 82    op_exp_b -> atom
Rule 83    op_exp_b -> PIZQ exp_bool PDER
Rule 84    comparacion -> exp_arit op_comp exp_arit
Rule 85    comparacion -> exp_str IGUALC exp_str
Rule 86    op_comp -> MAYOR
Rule 87    op_comp -> MENOR
Rule 88    op_comp -> IGUALC
Rule 89    op_comp -> NOTIGUAL
Rule 90    op_comp -> MENORIGUAL
Rule 91    op_comp -> MAYORIGUAL
Rule 92    exp_arit -> termino
Rule 93    exp_arit -> exp_arit MAS termino
Rule 94    exp_arit -> exp_arit MENOS termino
Rule 95    termino -> factor
Rule 96    termino -> termino POR factor
Rule 97    termino -> termino ENTRE factor
Rule 98    termino -> termino MOD factor
Rule 99    factor -> PIZQ exp_arit PDER
Rule 100   factor -> factor_oper_op factor_cte_op
Rule 101   factor_oper_op -> empty
Rule 102   factor_oper_op -> MENOS
Rule 103   factor_oper_op -> MAS
Rule 104   factor_cte_op -> CTE_NUMERAL
Rule 105   factor_cte_op -> CTE_REAL
Rule 106   factor_cte_op -> atom
Rule 107   factor_cte_op -> llamada_func
Rule 108   for -> FOR PIZQ asignacion exp_bool PYC atom IGUAL exp PDER LLIZQ ciclo_estatuto LLDER
Rule 109   exp_str -> CTE_STR
Rule 110   exp_str -> CTE_CHAR
Rule 111   exp_str -> atom
Rule 112   exp_str -> llamada_func
Rule 113   asignacion -> atom IGUAL exp PYC
Rule 114   atom -> ID arreglo atributo_arr
Rule 115   atom -> ID arreglo
Rule 116   atom -> THIS atributo_arr
Rule 117   atributo_arr -> PUNTO ID arreglo
Rule 118   condicion -> ciclo_cond ELSE LLIZQ ciclo_estatuto LLDER
Rule 119   ciclo_cond -> IF PIZQ exp_bool PDER LLIZQ ciclo_estatuto LLDER
Rule 120   ciclo_cond -> ciclo_cond ELSE IF PIZQ exp_bool PDER LLIZQ ciclo_estatuto LLDER
Rule 121   lectura -> INPUT PIZQ atom PDER PYC
Rule 122   escritura -> OUTPUT PIZQ exp PDER PYC
Rule 123   empty -> <empty>

Terminals, with rules where they appear

AND                  : 74
BOOL                 : 27
CHAR                 : 28
CLASS                : 4 11
CODER                : 20
COIZQ                : 20
COMA                 : 16 18 41 60
CTE_CHAR             : 110
CTE_NUMERAL          : 104
CTE_REAL             : 105
CTE_STR              : 109
ELSE                 : 118 120
ENTRE                : 97
FALSE                : 62
FOR                  : 108
HIDDEN               : 31
ID                   : 4 6 14 15 16 17 18 33 40 41 53 56 68 114 115 117
IF                   : 119 120
IGUAL                : 22 24 108 113
IGUALC               : 85 88
INPUT                : 121
LLDER                : 4 11 42 70 108 118 119 120
LLIZQ                : 4 11 42 70 108 118 119 120
MAIN                 : 11 36
MAS                  : 93 103
MAYOR                : 86
MAYORIGUAL           : 91
MENOR                : 87
MENORIGUAL           : 90
MENOS                : 94 102
MOD                  : 98
NEW                  : 68
NOT                  : 77
NOTIGUAL             : 89
NUMERAL              : 25
OR                   : 72
OUTPUT               : 122
PDER                 : 36 37 53 68 70 83 99 108 119 120 121 122
PIZQ                 : 36 37 53 68 70 83 99 108 119 120 121 122
POR                  : 96
PUNTO                : 55 56 117
PYC                  : 12 53 69 108 113 121 122
REAL                 : 26
RETURN               : 69
STRING               : 29
THIS                 : 55 116
TRUE                 : 61
UNDER                : 6
VISIBLE              : 32 36
WHILE                : 70
WITHOUT              : 35 36
error                : 

Nonterminals, with rules where they appear

acceso               : 8 33
arreglo              : 15 16 17 18 56 114 115 117
asignacion           : 47 108
asignacion_exp       : 15 16
asignacion_obj       : 17 18
atom                 : 67 82 106 108 111 113 121
atributo_arr         : 114 116
caller               : 53
ciclo_clase          : 1 3
ciclo_cond           : 118 120
ciclo_estatuto       : 42 44 70 108 118 119 120
ciclo_func           : 4 10 11
ciclo_id             : 14 16 18
ciclo_tipo           : 13
ciclo_vars           : 4 8 11
clase                : 3
clase_main           : 1
comparacion          : 80
condicion            : 48
cte_bool             : 79
cuerpo_func          : 33 36
empty                : 2 5 7 9 19 21 23 30 38 43 54 57 76 101
escritura            : 49
estatuto             : 44
exp                  : 22 59 60 69 108 113 122
exp_arit             : 20 64 84 84 93 94 99
exp_b                : 73 74
exp_bool             : 63 70 72 81 83 108 119 120
exp_ciclo            : 58 60
exp_objeto           : 24 66
exp_op               : 53
exp_str              : 65 85 85
factor               : 95 96 97 98
factor_cte_op        : 100
factor_oper_op       : 100
for                  : 46
func                 : 10
herencia             : 4
lectura              : 50
llamada_func         : 51 78 107 112
main                 : 11
negacion             : 75
op_comp              : 84
op_exp_b             : 75
params               : 33
params_ciclo         : 39 41
params_op            : 37
programa             : 0
retorno              : 33
return               : 52
termino              : 92 93 94 96 97 98
termino_bool         : 71 72 74
tipo                 : 13 34 40 41
var_op               : 12
vars                 : 8 42
while                : 45

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . ciclo_clase clase_main
    (2) ciclo_clase -> . empty
    (3) ciclo_clase -> . ciclo_clase clase
    (123) empty -> .

    CLASS           reduce using rule 123 (empty -> .)

    ciclo_clase                    shift and go to state 1
    programa                       shift and go to state 2
    empty                          shift and go to state 3

state 1

    (1) programa -> ciclo_clase . clase_main
    (3) ciclo_clase -> ciclo_clase . clase
    (11) clase_main -> . CLASS MAIN LLIZQ ciclo_vars ciclo_func main LLDER
    (4) clase -> . CLASS ID herencia LLIZQ ciclo_vars ciclo_func LLDER

    CLASS           shift and go to state 6

    clase_main                     shift and go to state 4
    clase                          shift and go to state 5

state 2

    (0) S' -> programa .



state 3

    (2) ciclo_clase -> empty .

    CLASS           reduce using rule 2 (ciclo_clase -> empty .)


state 4

    (1) programa -> ciclo_clase clase_main .

    $end            reduce using rule 1 (programa -> ciclo_clase clase_main .)


state 5

    (3) ciclo_clase -> ciclo_clase clase .

    CLASS           reduce using rule 3 (ciclo_clase -> ciclo_clase clase .)


state 6

    (11) clase_main -> CLASS . MAIN LLIZQ ciclo_vars ciclo_func main LLDER
    (4) clase -> CLASS . ID herencia LLIZQ ciclo_vars ciclo_func LLDER

    MAIN            shift and go to state 7
    ID              shift and go to state 8


state 7

    (11) clase_main -> CLASS MAIN . LLIZQ ciclo_vars ciclo_func main LLDER

    LLIZQ           shift and go to state 9


state 8

    (4) clase -> CLASS ID . herencia LLIZQ ciclo_vars ciclo_func LLDER
    (5) herencia -> . empty
    (6) herencia -> . UNDER ID
    (123) empty -> .

    UNDER           shift and go to state 10
    LLIZQ           reduce using rule 123 (empty -> .)

    herencia                       shift and go to state 11
    empty                          shift and go to state 12

state 9

    (11) clase_main -> CLASS MAIN LLIZQ . ciclo_vars ciclo_func main LLDER
    (7) ciclo_vars -> . empty
    (8) ciclo_vars -> . ciclo_vars acceso vars
    (123) empty -> .

    HIDDEN          reduce using rule 123 (empty -> .)
    VISIBLE         reduce using rule 123 (empty -> .)
    WITHOUT         reduce using rule 123 (empty -> .)
    NUMERAL         reduce using rule 123 (empty -> .)
    REAL            reduce using rule 123 (empty -> .)
    BOOL            reduce using rule 123 (empty -> .)
    CHAR            reduce using rule 123 (empty -> .)
    STRING          reduce using rule 123 (empty -> .)
    ID              reduce using rule 123 (empty -> .)

    ciclo_vars                     shift and go to state 13
    empty                          shift and go to state 14

state 10

    (6) herencia -> UNDER . ID

    ID              shift and go to state 15


state 11

    (4) clase -> CLASS ID herencia . LLIZQ ciclo_vars ciclo_func LLDER

    LLIZQ           shift and go to state 16


state 12

    (5) herencia -> empty .

    LLIZQ           reduce using rule 5 (herencia -> empty .)


state 13

    (11) clase_main -> CLASS MAIN LLIZQ ciclo_vars . ciclo_func main LLDER
    (8) ciclo_vars -> ciclo_vars . acceso vars
    (9) ciclo_func -> . empty
    (10) ciclo_func -> . ciclo_func func
    (30) acceso -> . empty
    (31) acceso -> . HIDDEN
    (32) acceso -> . VISIBLE
    (123) empty -> .

  ! shift/reduce conflict for VISIBLE resolved as shift
  ! shift/reduce conflict for HIDDEN resolved as shift
    HIDDEN          shift and go to state 20
    VISIBLE         shift and go to state 19
    WITHOUT         reduce using rule 123 (empty -> .)
    NUMERAL         reduce using rule 123 (empty -> .)
    REAL            reduce using rule 123 (empty -> .)
    BOOL            reduce using rule 123 (empty -> .)
    CHAR            reduce using rule 123 (empty -> .)
    STRING          reduce using rule 123 (empty -> .)
    ID              reduce using rule 123 (empty -> .)

  ! VISIBLE         [ reduce using rule 123 (empty -> .) ]
  ! HIDDEN          [ reduce using rule 123 (empty -> .) ]

    acceso                         shift and go to state 18
    ciclo_func                     shift and go to state 17
    empty                          shift and go to state 21

state 14

    (7) ciclo_vars -> empty .

    HIDDEN          reduce using rule 7 (ciclo_vars -> empty .)
    VISIBLE         reduce using rule 7 (ciclo_vars -> empty .)
    LLDER           reduce using rule 7 (ciclo_vars -> empty .)
    WITHOUT         reduce using rule 7 (ciclo_vars -> empty .)
    NUMERAL         reduce using rule 7 (ciclo_vars -> empty .)
    REAL            reduce using rule 7 (ciclo_vars -> empty .)
    BOOL            reduce using rule 7 (ciclo_vars -> empty .)
    CHAR            reduce using rule 7 (ciclo_vars -> empty .)
    STRING          reduce using rule 7 (ciclo_vars -> empty .)
    ID              reduce using rule 7 (ciclo_vars -> empty .)


state 15

    (6) herencia -> UNDER ID .

    LLIZQ           reduce using rule 6 (herencia -> UNDER ID .)


state 16

    (4) clase -> CLASS ID herencia LLIZQ . ciclo_vars ciclo_func LLDER
    (7) ciclo_vars -> . empty
    (8) ciclo_vars -> . ciclo_vars acceso vars
    (123) empty -> .

    HIDDEN          reduce using rule 123 (empty -> .)
    VISIBLE         reduce using rule 123 (empty -> .)
    LLDER           reduce using rule 123 (empty -> .)
    WITHOUT         reduce using rule 123 (empty -> .)
    NUMERAL         reduce using rule 123 (empty -> .)
    REAL            reduce using rule 123 (empty -> .)
    BOOL            reduce using rule 123 (empty -> .)
    CHAR            reduce using rule 123 (empty -> .)
    STRING          reduce using rule 123 (empty -> .)
    ID              reduce using rule 123 (empty -> .)

    ciclo_vars                     shift and go to state 22
    empty                          shift and go to state 14

state 17

    (11) clase_main -> CLASS MAIN LLIZQ ciclo_vars ciclo_func . main LLDER
    (10) ciclo_func -> ciclo_func . func
    (36) main -> . VISIBLE WITHOUT MAIN PIZQ PDER cuerpo_func
    (33) func -> . acceso retorno ID params cuerpo_func
    (30) acceso -> . empty
    (31) acceso -> . HIDDEN
    (32) acceso -> . VISIBLE
    (123) empty -> .

    VISIBLE         shift and go to state 24
    HIDDEN          shift and go to state 20
    WITHOUT         reduce using rule 123 (empty -> .)
    NUMERAL         reduce using rule 123 (empty -> .)
    REAL            reduce using rule 123 (empty -> .)
    BOOL            reduce using rule 123 (empty -> .)
    CHAR            reduce using rule 123 (empty -> .)
    STRING          reduce using rule 123 (empty -> .)

    acceso                         shift and go to state 23
    func                           shift and go to state 25
    main                           shift and go to state 26
    empty                          shift and go to state 27

state 18

    (8) ciclo_vars -> ciclo_vars acceso . vars
    (12) vars -> . var_op PYC
    (13) var_op -> . tipo ciclo_tipo
    (14) var_op -> . ID ciclo_id
    (25) tipo -> . NUMERAL
    (26) tipo -> . REAL
    (27) tipo -> . BOOL
    (28) tipo -> . CHAR
    (29) tipo -> . STRING

    ID              shift and go to state 35
    NUMERAL         shift and go to state 30
    REAL            shift and go to state 28
    BOOL            shift and go to state 33
    CHAR            shift and go to state 29
    STRING          shift and go to state 36

    vars                           shift and go to state 31
    tipo                           shift and go to state 32
    var_op                         shift and go to state 34

state 19

    (32) acceso -> VISIBLE .

    ID              reduce using rule 32 (acceso -> VISIBLE .)
    NUMERAL         reduce using rule 32 (acceso -> VISIBLE .)
    REAL            reduce using rule 32 (acceso -> VISIBLE .)
    BOOL            reduce using rule 32 (acceso -> VISIBLE .)
    CHAR            reduce using rule 32 (acceso -> VISIBLE .)
    STRING          reduce using rule 32 (acceso -> VISIBLE .)
    WITHOUT         reduce using rule 32 (acceso -> VISIBLE .)


state 20

    (31) acceso -> HIDDEN .

    ID              reduce using rule 31 (acceso -> HIDDEN .)
    NUMERAL         reduce using rule 31 (acceso -> HIDDEN .)
    REAL            reduce using rule 31 (acceso -> HIDDEN .)
    BOOL            reduce using rule 31 (acceso -> HIDDEN .)
    CHAR            reduce using rule 31 (acceso -> HIDDEN .)
    STRING          reduce using rule 31 (acceso -> HIDDEN .)
    WITHOUT         reduce using rule 31 (acceso -> HIDDEN .)


state 21

    (9) ciclo_func -> empty .
    (30) acceso -> empty .

  ! reduce/reduce conflict for NUMERAL resolved using rule 9 (ciclo_func -> empty .)
  ! reduce/reduce conflict for REAL resolved using rule 9 (ciclo_func -> empty .)
  ! reduce/reduce conflict for BOOL resolved using rule 9 (ciclo_func -> empty .)
  ! reduce/reduce conflict for CHAR resolved using rule 9 (ciclo_func -> empty .)
  ! reduce/reduce conflict for STRING resolved using rule 9 (ciclo_func -> empty .)
    LLDER           reduce using rule 9 (ciclo_func -> empty .)
    HIDDEN          reduce using rule 9 (ciclo_func -> empty .)
    VISIBLE         reduce using rule 9 (ciclo_func -> empty .)
    WITHOUT         reduce using rule 9 (ciclo_func -> empty .)
    NUMERAL         reduce using rule 9 (ciclo_func -> empty .)
    REAL            reduce using rule 9 (ciclo_func -> empty .)
    BOOL            reduce using rule 9 (ciclo_func -> empty .)
    CHAR            reduce using rule 9 (ciclo_func -> empty .)
    STRING          reduce using rule 9 (ciclo_func -> empty .)
    ID              reduce using rule 30 (acceso -> empty .)

  ! NUMERAL         [ reduce using rule 30 (acceso -> empty .) ]
  ! REAL            [ reduce using rule 30 (acceso -> empty .) ]
  ! BOOL            [ reduce using rule 30 (acceso -> empty .) ]
  ! CHAR            [ reduce using rule 30 (acceso -> empty .) ]
  ! STRING          [ reduce using rule 30 (acceso -> empty .) ]


state 22

    (4) clase -> CLASS ID herencia LLIZQ ciclo_vars . ciclo_func LLDER
    (8) ciclo_vars -> ciclo_vars . acceso vars
    (9) ciclo_func -> . empty
    (10) ciclo_func -> . ciclo_func func
    (30) acceso -> . empty
    (31) acceso -> . HIDDEN
    (32) acceso -> . VISIBLE
    (123) empty -> .

  ! shift/reduce conflict for HIDDEN resolved as shift
  ! shift/reduce conflict for VISIBLE resolved as shift
    HIDDEN          shift and go to state 20
    VISIBLE         shift and go to state 19
    LLDER           reduce using rule 123 (empty -> .)
    WITHOUT         reduce using rule 123 (empty -> .)
    NUMERAL         reduce using rule 123 (empty -> .)
    REAL            reduce using rule 123 (empty -> .)
    BOOL            reduce using rule 123 (empty -> .)
    CHAR            reduce using rule 123 (empty -> .)
    STRING          reduce using rule 123 (empty -> .)
    ID              reduce using rule 123 (empty -> .)

  ! HIDDEN          [ reduce using rule 123 (empty -> .) ]
  ! VISIBLE         [ reduce using rule 123 (empty -> .) ]

    acceso                         shift and go to state 18
    ciclo_func                     shift and go to state 37
    empty                          shift and go to state 21

state 23

    (33) func -> acceso . retorno ID params cuerpo_func
    (34) retorno -> . tipo
    (35) retorno -> . WITHOUT
    (25) tipo -> . NUMERAL
    (26) tipo -> . REAL
    (27) tipo -> . BOOL
    (28) tipo -> . CHAR
    (29) tipo -> . STRING

    WITHOUT         shift and go to state 39
    NUMERAL         shift and go to state 30
    REAL            shift and go to state 28
    BOOL            shift and go to state 33
    CHAR            shift and go to state 29
    STRING          shift and go to state 36

    retorno                        shift and go to state 40
    tipo                           shift and go to state 38

state 24

    (36) main -> VISIBLE . WITHOUT MAIN PIZQ PDER cuerpo_func
    (32) acceso -> VISIBLE .

  ! shift/reduce conflict for WITHOUT resolved as shift
    WITHOUT         shift and go to state 41
    NUMERAL         reduce using rule 32 (acceso -> VISIBLE .)
    REAL            reduce using rule 32 (acceso -> VISIBLE .)
    BOOL            reduce using rule 32 (acceso -> VISIBLE .)
    CHAR            reduce using rule 32 (acceso -> VISIBLE .)
    STRING          reduce using rule 32 (acceso -> VISIBLE .)

  ! WITHOUT         [ reduce using rule 32 (acceso -> VISIBLE .) ]


state 25

    (10) ciclo_func -> ciclo_func func .

    LLDER           reduce using rule 10 (ciclo_func -> ciclo_func func .)
    HIDDEN          reduce using rule 10 (ciclo_func -> ciclo_func func .)
    VISIBLE         reduce using rule 10 (ciclo_func -> ciclo_func func .)
    WITHOUT         reduce using rule 10 (ciclo_func -> ciclo_func func .)
    NUMERAL         reduce using rule 10 (ciclo_func -> ciclo_func func .)
    REAL            reduce using rule 10 (ciclo_func -> ciclo_func func .)
    BOOL            reduce using rule 10 (ciclo_func -> ciclo_func func .)
    CHAR            reduce using rule 10 (ciclo_func -> ciclo_func func .)
    STRING          reduce using rule 10 (ciclo_func -> ciclo_func func .)


state 26

    (11) clase_main -> CLASS MAIN LLIZQ ciclo_vars ciclo_func main . LLDER

    LLDER           shift and go to state 42


state 27

    (30) acceso -> empty .

    WITHOUT         reduce using rule 30 (acceso -> empty .)
    NUMERAL         reduce using rule 30 (acceso -> empty .)
    REAL            reduce using rule 30 (acceso -> empty .)
    BOOL            reduce using rule 30 (acceso -> empty .)
    CHAR            reduce using rule 30 (acceso -> empty .)
    STRING          reduce using rule 30 (acceso -> empty .)


state 28

    (26) tipo -> REAL .

    ID              reduce using rule 26 (tipo -> REAL .)


state 29

    (28) tipo -> CHAR .

    ID              reduce using rule 28 (tipo -> CHAR .)


state 30

    (25) tipo -> NUMERAL .

    ID              reduce using rule 25 (tipo -> NUMERAL .)


state 31

    (8) ciclo_vars -> ciclo_vars acceso vars .

    HIDDEN          reduce using rule 8 (ciclo_vars -> ciclo_vars acceso vars .)
    VISIBLE         reduce using rule 8 (ciclo_vars -> ciclo_vars acceso vars .)
    LLDER           reduce using rule 8 (ciclo_vars -> ciclo_vars acceso vars .)
    WITHOUT         reduce using rule 8 (ciclo_vars -> ciclo_vars acceso vars .)
    NUMERAL         reduce using rule 8 (ciclo_vars -> ciclo_vars acceso vars .)
    REAL            reduce using rule 8 (ciclo_vars -> ciclo_vars acceso vars .)
    BOOL            reduce using rule 8 (ciclo_vars -> ciclo_vars acceso vars .)
    CHAR            reduce using rule 8 (ciclo_vars -> ciclo_vars acceso vars .)
    STRING          reduce using rule 8 (ciclo_vars -> ciclo_vars acceso vars .)
    ID              reduce using rule 8 (ciclo_vars -> ciclo_vars acceso vars .)


state 32

    (13) var_op -> tipo . ciclo_tipo
    (15) ciclo_tipo -> . ID arreglo asignacion_exp
    (16) ciclo_tipo -> . ciclo_id COMA ID arreglo asignacion_exp
    (17) ciclo_id -> . ID arreglo asignacion_obj
    (18) ciclo_id -> . ciclo_id COMA ID arreglo asignacion_obj

    ID              shift and go to state 45

    ciclo_id                       shift and go to state 43
    ciclo_tipo                     shift and go to state 44

state 33

    (27) tipo -> BOOL .

    ID              reduce using rule 27 (tipo -> BOOL .)


state 34

    (12) vars -> var_op . PYC

    PYC             shift and go to state 46


state 35

    (14) var_op -> ID . ciclo_id
    (17) ciclo_id -> . ID arreglo asignacion_obj
    (18) ciclo_id -> . ciclo_id COMA ID arreglo asignacion_obj

    ID              shift and go to state 48

    ciclo_id                       shift and go to state 47

state 36

    (29) tipo -> STRING .

    ID              reduce using rule 29 (tipo -> STRING .)


state 37

    (4) clase -> CLASS ID herencia LLIZQ ciclo_vars ciclo_func . LLDER
    (10) ciclo_func -> ciclo_func . func
    (33) func -> . acceso retorno ID params cuerpo_func
    (30) acceso -> . empty
    (31) acceso -> . HIDDEN
    (32) acceso -> . VISIBLE
    (123) empty -> .
